<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuggestionBox">

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="534dp"
        android:backgroundTint="@color/mediumBlue"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/submitButton"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/speak_up_be_heard_nyour_feedback_nmatters"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/suggestion_box"
        android:contentDescription="@string/suggestionlogo" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_new_24"
        android:contentDescription="@string/back_button" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="name"
        android:background="@drawable/cardview_border"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:gravity="start|top"
        android:hint="@string/Enter_the_feedback"
        android:includeFontPadding="true"
        android:inputType="textMultiLine"
        android:lines="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />





</androidx.constraintlayout.widget.ConstraintLayout>