<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.Leave">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnSendRequest"
            android:layout_width="263dp"
            android:layout_height="49dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="152dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="@color/mediumBlue"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/send_request"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etLeave" />

        <EditText
            android:id="@+id/etLeave"
            android:layout_width="360dp"
            android:layout_height="317dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="134dp"
            android:layout_marginEnd="40dp"
            android:background="@color/lightBlue"
            android:ems="10"
            android:gravity="start|top"
            android:hint="  State the Reason"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="56dp"
            android:contentDescription="@string/leaveLogo"
            android:src="@drawable/leave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="78dp"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/leave_request"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="19dp"
            android:contentDescription="@string/back_arrow"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/lldate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            android:padding="6dp"
            android:layout_marginLeft="5dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSendRequest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etLeave">

            <!-- TextView to display selected day -->
            <TextView
                android:paddingLeft="10dp"
                android:id="@+id/dayTextView"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Select Day for Leave"
                android:textSize="20sp" />

            <!-- Button to select the day -->
            <Button
                android:id="@+id/selectDayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Select" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>